tests/ui/fmt/format-alignment-error.stderr
error: invalid format string: expected `}`, found `!`
  --> $DIR/format-alignment-error.rs:3:17
   |
LL |     println!("{:!}", 5);
   |               - ^ expected `}` in format string
   |               |
   |               because of this opening brace
   |
   = note: if you intended to print `{`, you can escape it using `{{`

error: aborting due to 1 previous error

