tests/ui/fmt/format-alignment-error.rs
fn main() {
    // Invalid alignment specifier `!`
    println!("{:!}", 5);
}
